# surety

./: .gitignore  .pylintrc  README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  release.yml  test.yml
docs/source/: api.rst  conf.py  config.rst  contracts.rst  db.rst  diff.rst  field_types.rst  index.rst  installation.rst  philosophy.rst  quickstart.rst  ui.rst  utilities.rst
docs/source/_static/: custom.css
docs/source/_templates/: sidebar-links.html
requirements/: common.txt  test.txt
src/surety/: __init__.py
src/surety/process/: dictionary.py
src/surety/sdk/: dictionary.py  types.py
surety/process/: dictionary.py
surety/sdk/: array.py  fakeable.py  types.py
tests/: data.py
tests/imports/: test_config.py  test_diff.py
tests/process/: test_dictionary.py  test_is_callable_with_strict_args.py
tests/sdk/: test_array.py  test_base_enum.py  test_dates.py  test_dictionary.py  test_fakeable.py  test_types.py
tests/test_data_generators/: test_full_value.py  test_generated.py  test_value.py
