[build-system]
requires = [
    "setuptools>=42",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "surety"
description = "Contract-driven service interaction modeling and test generation."
requires-python = ">=3.7"
readme = "README.rst"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    {name="Elena Kulgavaya", email="elena.kulgavaya@gmail.com"}
]
dynamic = ["version"]
keywords = ["testing", "automation", "python"]
dependencies = [
    "Faker==11.3.0",
    "pytz==2021.3",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["surety*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.urls]
"Bug Tracker" = "https://github.com/elenakulgavaya/surety/issues"
