[build-system]
requires = [
    "setuptools>=42",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "surety"
description = "Surety — contract-driven testing framework for Python. Define schemas, generate realistic test data, and validate API, database, and UI interactions with reusable Python classes."
requires-python = ">=3.7"
readme = "README.rst"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    {name="Elena Kulgavaya", email="elena.kulgavaya@gmail.com"}
]
dynamic = ["version"]
keywords = [
    "surety",
    "testing",
    "contract testing",
    "contract-driven testing",
    "test automation",
    "python testing",
    "api testing",
    "schema validation",
    "test data generation",
    "automation",
    "python",
]
dependencies = [
    "Faker==40.15.0",
    "pytz==2026.2",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["surety*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.urls]
"Homepage" = "https://github.com/elenakulgavaya/surety"
"Documentation" = "https://surety.readthedocs.io/"
"Source" = "https://github.com/elenakulgavaya/surety"
"Bug Tracker" = "https://github.com/elenakulgavaya/surety/issues"
